--- a/src/assets/scss/geko-base-crud.scss
+++ b/src/assets/scss/geko-base-crud.scss
@@ -302,7 +302,6 @@
         }
       }
     }
-
   }
   .filters {
     padding: 1em;
@@ -320,7 +319,7 @@
       margin-right: 10px;
 
       .geko-input label {
-        font-size: .8em !important;
+        font-size: 0.8em !important;
       }
     }
   }
@@ -464,12 +463,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     .select-radio-item {
       padding: 0.5em 1em;
       background-color: $success_light;
       color: $success;
       border-radius: 8px;
       margin-right: 10px;
+      margin-bottom: 0.5em;
       span {
         font-size: 0.9em;
       }
