--- a/src/assets/scss/geko-theme.scss
+++ b/src/assets/scss/geko-theme.scss
@@ -83,7 +83,6 @@ svg.wave {
           display: flex;
           flex-direction: row;
           align-items: center;
-          // justify-content: space-between;
           width: 100%;
           padding-block: 7px;
           padding-inline: 10px;
@@ -181,6 +180,34 @@ svg.wave {
           span {
             color: $success !important;
             transition: all 0.5s ease;
+          }
+        }
+      }
+
+      
+    }
+
+    .sidebar-menu-item.activities {
+      padding-block: .5em;
+      &.carbon {
+        
+        background-color: lighten($success_light, 4);
+      }
+      .carbon-switch {
+        border-radius: 12px;
+        overflow: hidden;
+        border: 1px solid rgba(163, 163, 163, 0.534);
+        button {
+          font-size: .8em;
+          font-weight: normal;
+          padding-inline: 10px;
+          background-color: $success_light;
+          padding-block: 5px;
+          color: $success;
+          &.active {
+            background-color: $success;
+            color: white;
+            font-weight: 500;
           }
         }
       }
