--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -147,6 +147,10 @@ button.circle {
   text-overflow: ellipsis;
 }
 
+.bordered-top {
+  border-top: 1px solid rgba(128, 128, 128, 0.445);
+}
+
 .justify-content-end {
   justify-content: flex-end;
 }
