--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -230,11 +230,11 @@ button.circle {
   .vs__search {
     height: unset !important;
     border-radius: 20px;
-    background-color: #F3F6F9 !important;
+    // background-color: #F3F6F9 !important;
   }
   .vs__dropdown-toggle {
     height: 30px !important;
-    background-color: #F3F6F9 !important;
+    // background-color: #F3F6F9 !important;
     border: none;
   }
 
