--- a/src/views/Lahan/lahan.scss
+++ b/src/views/Lahan/lahan.scss
@@ -266,6 +266,7 @@
       display: flex;
       flex-direction: row;
       margin-top: 10px;
+      flex-wrap: wrap;
     }
     .tree-item {
       margin-right: 10px;
@@ -279,6 +280,7 @@
       padding-right: 20px;
       padding-block: 7px;
       min-width: 10em;
+      margin-bottom: 10px;
       i {
         font-size: 3em;
         color: $success;
