--- a/src/assets/scss/geko-base-crud.scss
+++ b/src/assets/scss/geko-base-crud.scss
@@ -218,9 +218,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        flex-wrap: wrap;
         form {
           max-width: 40%;
-          min-width: 400px;
+          min-width: 300px;
           border-right: 1px solid rgba(191, 191, 191, 0.3);
           margin-right: 8px;
         }
@@ -231,9 +232,15 @@
           background-color: #c4c4c75d;
           transition: all 0.2s ease;
           border-radius: 50%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
 
           i {
             font-size: 1.2em !important;
+            width: 38px;
+            height: 38px;
             // color: darken($primary, 40) !important;
             color: darken($success, 5);
           }
@@ -310,6 +317,28 @@
     margin-bottom: 1em;
     display: none !important;
     transition: all 0.5s ease;
+    .filter-footer {
+      padding-top: 1em;
+    }
+    &.main-filter {
+      border: none;
+      padding-block: 0;
+      margin-block: 0 !important;
+      padding-left: 0;
+      margin-left: 0;
+      padding-top: 1em;
+      margin-bottom: 0 !important;
+      width: 100% !important;
+
+      .vs-search {
+
+        padding-right: 0 !important;
+        margin-right: 0 !important;
+      }
+      // .vs-style.filter-select {
+      //   min-width: 12ch !important;
+      // }
+    }
     &.active {
       max-height: 100vh;
       transition: all 0.5s ease;
@@ -318,6 +347,26 @@
     .filter-item {
       margin-right: 10px;
 
+      .input-group-wrapper {
+        background-color: #F3F6F9;
+        border-radius: 20px;
+        // border: none !important;
+        
+        border: 1px solid #e3e8ecad;
+        padding-inline: 15px;
+
+        input::placeholder {
+          color: #3f4254c5 !important;
+          font-weight: bold;
+        }
+        .vs__search {
+          padding-left: 7px;
+        }
+      }
+      .input-group-wrapper .filter-select .vs__dropdown-toggle, .input-group-wrapper .filter-select .vs__search {
+
+        background-color: transparent !important;
+      }
       .geko-input label {
         font-size: 0.8em !important;
       }
@@ -425,6 +474,10 @@
     border: 1px solid rgba(128, 128, 128, 0.274);
     border-radius: 8px;
     overflow: hidden;
+
+    &.invalid {
+      border-color: $danger !important;
+    }
     input, textarea, .vs-style, .vue-editor,.select-radio-row, .upload-wrapper, .date {
       flex: 1;
       border: none;
