--- a/src/assets/scss/geko-base-crud.scss
+++ b/src/assets/scss/geko-base-crud.scss
@@ -10,7 +10,6 @@
 
 .geko-base-crud {
   font-family: "Poppins", sans-serif !important;
-
   .geko-base-crud-header {
     display: flex;
     flex-direction: row;
@@ -18,6 +17,48 @@
     align-items: center;
     padding-right: 2em;
 
+    .v-breadcrumbs.breadcrumbsmain li {
+      font-size: .9em !important;
+    }
+
+    .global-search {
+      border: 1px solid rgba(128, 128, 128, 0.382);
+      width: 60%;
+      max-width: 500px;
+      border-radius: 30px;
+      height: 35px;
+      position: relative;
+      input {
+        height: 100%;
+        padding-inline: 2em;
+        width: 100%;
+
+        &:focus {
+          outline: none !important;
+        }
+      }
+
+      .search-result {
+        width: 100%;
+        position: absolute;
+        background-color: white;
+        top: 35px;
+        left: 0;
+        height: 40vh;
+        z-index: 10;
+        border: 1px solid rgba(128, 128, 128, 0.622);
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border-radius: 12px;
+        padding: 1em;
+
+        .menu-list {
+          .menu-label {
+            font-weight: bold
+          }
+        }
+      }
+      
+    }
     .global-filters {
       .v-select-40 {
         .vs__search {
@@ -64,6 +105,10 @@
   }
 
   .v-data-table__wrapper {
+    table {
+    }
+    // table tr th  { position: sticky !important; top: 0 !important; z-index: 2 !important;}
+
     tr td.text-start {
       // display: flex;
       // flex-direction: column;
@@ -197,6 +242,7 @@
     border-bottom: 1px dashed rgba(128, 128, 128, 0.244);
     padding-bottom: 1em;
   }
+  
   .geko-list-header {
     width: 100%;
     display: flex;
