--- a/src/views/MasterData/roles.scss
+++ b/src/views/MasterData/roles.scss
@@ -15,6 +15,10 @@
                 display: none;
             }
         }
+
+        tr:hover{
+            background-color: rgba(128, 128, 128, 0.1);
+        }
         tr td:not(:first-child) {
             text-align: center;
         }
