--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,7 +221,7 @@ body * {
   .swal2-container.swal2-center>.swal2-popup, .swal2-popup.swal2-toast {
     border-radius: 25px;
   }
-  .swal2-styled.swal2-confirm, .swal2-styled.swal2-cancel {
+  .swal2-styled.swal2-confirm, .swal2-styled.swal2-cancel, .swal2-styled.swal2-deny {
     border-radius: 100px!important;
   }
 
